--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@
   --header-height: 3.5rem;
 }
 
+
+
 /* Some Variables */
 :root {
   --green-color: #3cd870;
@@ -20,6 +22,8 @@
   --text-color: #ffffff;
   --bg-color: #10181f;
   --bg-color2: #0b0e13;
+
+  --mb-1-5: 1.5rem;
 }
 
 * {
@@ -40,62 +44,96 @@ body {
   color: var(--text-color);
   background-color: var(--bg-color2);
 }
+.grid {
+  display: grid;
+  gap: 1.5rem;
+}
 
+.section {
+  padding: 2rem 0 4rem;
+}
 .container {
-  position: relative;
-  width: 100%;
-  min-height: 640px;
-  display: flex;
+  max-width: 768px;
+  margin-left: var(--mb-1-5);
+  margin-right: var(--mb-1-5);
+}
+
+/* HOME */
+.home__container {
+  gap: 1rem;
+}
+
+.home__content {
+  grid-template-columns: .5fr 3fr;
+  padding-top: 3.5rem;
   align-items: center;
-  background: url(assets/slider_bg.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  overflow: hidden;
 }
-.container img {
-  width: 400px;
-  position: absolute;
-  bottom: 0px;
-  right: 200px;
+
+.home__social {
+  display: grid;
+  grid-template-columns: max-content;
+  row-gap: 1rem;
 }
-.home-text {
-  padding: 0 150px;
+
+
+.home__blob {
+  width: 200px;
+  fill: var(--green-color);
 }
-.home-text span {
-  font-weight: 400;
-  text-transform: uppercase;
-  color: var(--green-color);
+
+.home__blob-img {
+  width: 170px;
 }
-.home-text h1 {
-  font-size: 2.4rem;
-  font-weight: 700;
-  margin-bottom: 1rem;
+
+.home__data {
+  grid-column: 1/3;
 }
-.btn {
-  padding: 0.6rem 1rem;
-  background: var(--green-color);
-  color: var(--bg-color);
-  font-weight: 400;
-  border-radius: 5rem;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  column-gap: 0.5rem;
-  max-width: 160px;
+
+.home__title {
+  font-size: 1.6rem;
 }
-.btn .bx {
-  padding: 4px;
-  background: var(--bg-color);
+
+.home__subtitle {
+  font-size: var(--h3-font-size);
   color: var(--text-color);
-  border-radius: 1rem;
-  font-size: 20px;
-  margin: auto;
+  font-weight: var(--font-medium);
+  margin-bottom: var(--mb-0-75);
 }
-.btn:hover {
-  background: var(--text-color);
-  transition: 0.2s ease;
+
+.home__description {
+  margin-bottom: var(--mb-2);
 }
+
+.home__scroll {
+  display: none;
+}
+
+.home__scroll-button {
+  color: var(--first-color);
+  transition: .3s;
+}
+
+.home__scroll-button:hover {
+  transform: translateY(0.25rem);
+}
+
+.home__scroll-mouse {
+  font-size: 2rem;
+}
+
+.home__scroll-name {
+  font-size: var(--small-font-size);
+  color: var(--title-color);
+  font-weight: var(--font-medium);
+  margin-right: var(--mb-0-25);
+}
+
+.home__scroll-arrow {
+  font-size: 1.25rem;
+}
+
+
+
 .heading {
   display: flex;
   justify-content: center;
@@ -369,6 +407,12 @@ body {
 
 /* contact */
 
+.contact-form{
+  max-width: 968px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .container-contact {
   display: grid;
   grid-template-columns: repeat(2, 50%);
@@ -508,12 +552,7 @@ body {
 }
 
 @media screen and (max-width: 600px) {
-  .container {
-    width: 95%;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-  }
+
 
   .box-info {
     gap: 15px;
@@ -725,12 +764,8 @@ body {
   .header {
     padding: 18px 60px;
   }
-  .home-text {
-    padding: 0 100px;
-  }
-  .container img {
-    right: 100px;
-  }
+
+
 }
 @media (max-width: 991px) {
   header {
@@ -739,10 +774,7 @@ body {
   section {
     padding: 50px 4%;
   }
-  .home-text h1 {
-    font-size: 2rem;
-    padding: 0 5%;
-  }
+
 }
 @media (max-width: 852px) {
   header {
@@ -751,25 +783,16 @@ body {
   #menu-icon {
     display: initial;
   }
-  .home-text h1 {
-    font-size: 1.7rem;
-  }
-  .container img {
-    width: 390px;
-  }
-  .btn {
-    padding: 0.6rem 1.2rem;
-  }
+  
+
+
   .about-container {
     grid-template-columns: repeat(auto-fit, minmax(300px, auto));
   }
 }
 
 @media (max-width: 712px) {
-  .container img {
-    right: 30px;
-    width: 350px;
-  }
+
   .heading h1 {
     font-size: 1.2rem;
   }
@@ -778,43 +801,16 @@ body {
   }
 }
 
-@media (max-width: 642px) {
-  .container img {
-    right: 0;
-    width: 300px;
-  }
-}
 
-@media (max-width: 546px) {
-  .container img {
-    right: 0;
-    width: 200px;
-    height: 820px;
-    object-fit: contain;
-    padding-top: 40%;
-  }
-}
+
+
 
 @media (max-width: 370px) {
-  .container img {
-    right: 60px;
-    width: 200px;
-    object-fit: contain;
-  }
+
   .logo {
     font-size: 1rem;
   }
-  .home-text {
-    padding-top: 5rem;
-    padding-bottom: 32rem;
-    text-align: center;
-  }
-  .home-text span {
-    font-size: 0.8rem;
-  }
-  .home-text h1 {
-    font-size: 1.4rem;
-  }
+
   .heading {
     flex-direction: column;
     text-align: center;
@@ -886,4 +882,78 @@ body {
   #menu-toggle:checked ~ .navbar-list {
     transform: translateX(0);
   }
+}
+
+@media screen and (max-width: 350px) {
+ 
+  .home__content {
+    grid-template-columns: .25fr 3fr;
+  }
+  .home__blob {
+    width: 180px;
+  }
+  .container {
+    margin-left: var(--mb-1);
+    margin-right: var(--mb-1);
+  }
+  
+}
+
+/* For medium devices */
+@media screen and (min-width: 568px) {
+  .home__content {
+    grid-template-columns: max-content 1fr 1fr;
+  }
+  .home__data {
+    grid-column: initial;
+  }
+  .home__img {
+    order: 1;
+    justify-self: center;
+  }
+  
+}
+
+
+@media screen and (min-width: 768px) {
+ 
+  .home__container {
+    row-gap: 5rem;
+  }
+  .home__content {
+    padding-top: 5.5rem;
+    column-gap: 2rem;
+  }
+  .home__blob {
+    width: 270px;
+  }
+  .home__scroll {
+    display: block;
+  }
+  .home__scroll-button {
+    margin-left: 3rem;
+  }
+  .section {
+    padding: 6rem 0 2rem;
+  }
+  .section__subtitle {
+    margin-bottom: 4rem;
+  }
+  .container {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+}
+
+/* For large devices */
+@media screen and (min-width: 1024px) {
+  
+  .home__blob {
+    width: 320px;
+  }
+  .home__social {
+    transform: translateX(-6rem);
+  }
+ 
 }
