--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,14 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&family=Roboto+Condensed:wght@400;700&display=swap");
 
 :root {
-  --primary-color: #3685fb;
-  --primary-color-dark: #2f73d9;
-  --secondary-color: #fafcff;
-  --text-dark: #0d213f;
-  --text-light: #767268;
-  --extra-light: #ffffff;
+  --primary-color: #2563eb;
+  --primary-color-dark: #1e40af;
+  --text-dark: #1f1f1f;
+  --text-light: #4b5563;
+  --extra-light: #f3f4f6;
+  --white: #ffffff;
   --max-width: 1200px;
+  --font-heading: "Roboto Condensed", sans-serif;
 }
 
 * {
@@ -19,45 +20,6 @@
 .section__container {
   max-width: var(--max-width);
   margin: auto;
-  padding: 5rem 1rem;
-}
-
-.section__header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 2rem;
-  flex-wrap: wrap;
-  margin-bottom: 4rem;
-}
-
-.section__title {
-  font-size: 2rem;
-  font-weight: 600;
-  color: var(--text-dark);
-  margin-bottom: 1rem;
-}
-
-.section__subtitle {
-  font-size: 1rem;
-  color: var(--text-dark);
-  max-width: calc(var(--max-width) / 2);
-}
-
-.btn {
-  padding: 0.75rem 2rem;
-  outline: none;
-  border: none;
-  font-size: 1rem;
-  color: var(--extra-light);
-  background-color: var(--primary-color);
-  border-radius: 5rem;
-  cursor: pointer;
-  transition: 0.3s;
-}
-
-.btn:hover {
-  background-color: var(--primary-color-dark);
 }
 
 a {
@@ -66,391 +28,404 @@ a {
 
 img {
   width: 100%;
-  display: block;
 }
 
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: "Montserrat", sans-serif;
+}
+
+header {
+  background-image: url("assets/header.jpg");
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 nav {
-  padding: 1rem;
-  position: absolute;
-  top: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 100%;
-  max-width: var(--max-width);
+  padding: 1rem 5rem;
+  background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   align-items: center;
   justify-content: space-between;
-}
-
-.nav__logo {
-  font-size: 1.2rem;
-  font-weight: 600;
-  color: var(--text-dark);
-  cursor: pointer;
-}
-
-.nav__logo span {
-  color: var(--primary-color);
 }
 
 .nav__links {
   list-style: none;
   display: flex;
   align-items: center;
-  gap: 1rem;
+  gap: 2rem;
 }
 
-.link a {
-  padding: 0 1rem;
-  color: var(--text-dark);
+.link {
+  color: var(--white);
+  font-size: 0.9rem;
+  cursor: pointer;
   transition: 0.3s;
 }
 
-.link a:hover {
-  color: var(--primary-color);
+.link.logo {
+  font-weight: 600;
 }
 
-header {
-  background-color: var(--secondary-color);
+.social__icons {
+  display: flex;
+  align-items: center;
+  gap: 1.5rem;
+}
+
+.social__icons span {
+  color: var(--white);
+  font-size: 1rem;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.link:hover,
+.social__icons span:hover {
+  color: var(--primary-color);
 }
 
 .header__container {
-  min-height: 100vh;
+  padding: 1rem;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 2rem;
-}
-
-.header__image {
-  position: relative;
-}
-
-.header__image img {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  border: 0.5rem solid var(--extra-light);
-  border-radius: 2rem;
-  box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.1);
-}
-
-.header__image img:nth-child(1) {
-  max-width: 350px;
-  transform: translate(-75%, -50%);
-}
-
-.header__image img:nth-child(2) {
-  max-width: 250px;
-  transform: translate(0%, -25%);
+  min-height: calc(700px - 60px);
 }
 
 .header__content {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.header__content > div {
-  max-width: 400px;
+  text-align: center;
+  color: var(--white);
   display: grid;
+  place-content: center;
   gap: 1rem;
-}
-
-.header__content .sub__header {
-  font-size: 1rem;
-  font-weight: 600;
-  color: var(--primary-color);
 }
 
 .header__content h1 {
-  font-size: 3rem;
-  line-height: 4rem;
-  font-weight: 800;
-  color: var(--text-dark);
+  font-size: 10rem;
+  line-height: 8rem;
 }
 
-.header__content .action__btns {
-  display: flex;
-  align-items: center;
-  gap: 2rem;
-  margin-top: 1rem;
+.header__content p {
+  letter-spacing: 2px;
 }
 
-.story {
-  display: flex;
-  align-items: center;
-  gap: 2rem;
-  cursor: pointer;
-}
-
-.video__image {
-  position: relative;
-}
-
-.video__image img {
-  width: 60px;
-  height: 60px;
-  border-radius: 100%;
-  box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.1);
-}
-
-.video__image span {
-  position: absolute;
-  top: 50%;
-  left: 100%;
-  transform: translate(-50%, -50%);
-}
-
-.video__image span i {
-  padding: 0.5rem;
-  font-size: 1rem;
-  color: red;
-  background-color: var(--extra-light);
-  border-radius: 100%;
-  box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.1);
-}
-
-.story > span {
-  font-size: 1rem;
-  font-weight: 600;
-  color: var(--text-dark);
-}
-
-.destination__nav {
-  display: flex;
-  gap: 1rem;
-}
-
-.destination__nav span {
-  width: 30px;
-  height: 30px;
-  display: grid;
-  place-content: center;
-  color: var(--primary-color);
-  border: 1px solid var(--primary-color);
-  border-radius: 100%;
-  font-size: 1.5rem;
-  cursor: pointer;
-  transition: 0.3s;
-}
-
-.destination__nav span:hover {
-  color: var(--extra-light);
-  background-color: var(--primary-color);
-}
-
-.destination__grid {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 2rem;
-}
-
-.destination__card {
-  overflow: hidden;
+.main__container {
   position: relative;
   isolation: isolate;
-  cursor: pointer;
+  padding: 0 1rem;
 }
 
-.destination__card img {
-  border-radius: 1rem;
-}
-
-.destination__details {
+.main__container::after {
   position: absolute;
-  width: calc(100% - 2rem);
-  padding: 1rem;
-  bottom: -6rem;
-  left: 50%;
-  transform: translateX(-50%);
-  text-align: center;
-  color: var(--extra-light);
-  background-color: rgba(255, 255, 255, 0.1);
-  backdrop-filter: blur(4px);
-  border-radius: 10px;
-  z-index: 1;
-  transition: 0.3s;
+  content: "";
+  bottom: 0;
+  left: 0;
+  height: 5rem;
+  width: 100%;
+  background-color: var(--text-dark);
+  z-index: -1;
 }
 
-.destination__card:hover .destination__details {
-  bottom: 1rem;
-}
-
-.destination__title {
-  font-size: 0.9rem;
-  margin-bottom: 0.5rem;
-}
-
-.destination__subtitle {
-  font-size: 1rem;
-  font-weight: 600;
-}
-
-.trip {
-  background-color: var(--secondary-color);
-}
-
-.trip__container :is(.section__title, .section__subtitle, .view__all) {
-  text-align: center;
-  margin-right: auto;
-  margin-left: auto;
-}
-
-.trip__grid {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 2rem;
-  margin: 4rem 0;
-}
-
-.trip__card {
-  border-radius: 1rem;
-  overflow: hidden;
-  box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.1);
-}
-
-.trip__details {
-  padding: 1rem;
-  display: grid;
-  gap: 0.5rem;
-  font-size: 1rem;
-  font-weight: 600;
-  color: var(--text-dark);
+.main__content {
+  max-width: var(--max-width);
+  margin: auto;
+  transform: translateY(-2.5rem);
   background-color: var(--extra-light);
-  cursor: pointer;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.25);
 }
 
-.rating {
-  color: goldenrod;
-}
-
-.booking__price {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.price span {
-  font-weight: 400;
-  font-size: 0.9rem;
-  color: var(--text-light);
-}
-
-.book__now {
-  padding: 0.5rem 1.5rem;
-  color: var(--primary-color);
-  outline: none;
-  border: 1px solid var(--primary-color);
-  border-radius: 5rem;
-  background-color: transparent;
-  cursor: pointer;
-  transition: 0.3s;
-}
-
-.book__now:hover {
-  color: var(--extra-light);
-  background-color: var(--primary-color);
-}
-
-.gallary__container {
+.service__container {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 2rem;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 5px;
 }
 
-.image__gallary {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 1rem;
-}
-
-.gallary__col {
-  display: grid;
-  place-content: center;
-  gap: 1rem;
-}
-
-.gallary__col img {
-  border-radius: 1rem;
-  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.2);
-}
-
-.gallary__content {
+.service__card {
+  padding: 2rem;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  gap: 1rem;
+  text-align: center;
+  background-color: var(--white);
 }
 
-.gallary__content > div {
-  max-width: 400px;
+.service__card span i {
+  font-size: 2.5rem;
+  color: var(--text-dark);
 }
 
-.gallary__content .section__subtitle {
-  margin-bottom: 2rem;
+.service__card h4 {
+  font-size: 1.2rem;
+  font-weight: 700;
+  font-family: var(--font-heading);
+  color: var(--primary-color-dark);
 }
 
-.subscribe {
-  background-color: var(--secondary-color);
+.service__card p {
+  font-size: 0.9rem;
+  color: var(--text-light);
 }
 
-.subscribe__container {
+.service__card a {
+  font-size: 0.9rem;
+  font-weight: 500;
+}
+
+.banner {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 2rem;
 }
 
-.subscribe__form {
+.banner__content {
+  padding: 5rem 1rem;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+  gap: 1rem;
+  text-align: center;
 }
 
-.subscribe__form form {
-  width: 100%;
+.banner__content .subtitle {
+  font-size: 0.8rem;
+  font-weight: 600;
+  letter-spacing: 2px;
+}
+
+.banner__content .title {
+  font-size: 1.5rem;
+  font-weight: 700;
+  font-family: var(--font-heading);
+  color: var(--primary-color-dark);
+}
+
+.banner__content .description {
+  color: var(--text-light);
+  margin: auto;
+  margin-bottom: 1rem;
   max-width: 400px;
-  display: flex;
-  background-color: var(--extra-light);
-  box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.1);
-  border-radius: 5rem;
 }
 
-.subscribe__form input {
-  width: 100%;
+.banner__content .price {
+  font-size: 1.2rem;
+  font-weight: 600;
+  color: var(--text-dark);
+  margin-bottom: 1rem;
+}
+
+.banner__content .price span {
+  font-size: 2rem;
+  font-weight: 800;
+  color: var(--primary-color);
+  margin-right: 2rem;
+}
+
+.countdown {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  margin-bottom: 1rem;
+}
+
+.square {
+  width: 100px;
   padding: 1rem;
+  background-color: var(--white);
+  text-align: center;
+  border-radius: 10px;
+}
+
+.square p {
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+
+.square span {
+  font-size: 0.7rem;
+  font-weight: 700;
+}
+
+.banner__content button {
+  padding: 1rem 2rem;
   outline: none;
   border: none;
   border-radius: 5rem;
-  font-size: 1rem;
+  color: var(--white);
+  background-color: var(--primary-color);
+  cursor: pointer;
+  transition: 0.3s;
 }
 
-.footer {
+.banner__content button:hover {
+  background-color: var(--primary-color-dark);
+}
+
+.banner__image {
+  background-image: url("assets/image-1.jpg");
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.collection__container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: 1fr;
+  gap: 5px;
+}
+
+.collection__container img {
+  display: flex;
+}
+
+.collection__image {
+  background-color: var(--white);
+  display: grid;
+  place-content: center;
+}
+
+.collection__image h4 {
+  padding: 1rem 2rem 0.5rem 2rem;
+  font-size: 1.1rem;
+  font-family: var(--font-heading);
+  color: var(--primary-color-dark);
+}
+
+.collection__image p {
+  padding: 0 2rem;
+  font-size: 0.9rem;
+  font-weight: 600;
+  color: var(--primary-color);
+}
+
+.collection__image p del {
+  font-size: 0.9rem;
+  font-weight: 600;
+  color: var(--text-light);
+}
+
+.collection__card {
+  padding: 2rem;
+  background-color: var(--text-dark);
+  color: var(--white);
+  display: grid;
+  place-content: center;
+  gap: 1rem;
+  cursor: pointer;
+}
+
+.collection__card h4 {
+  font-size: 2rem;
+  font-weight: 700;
+  font-family: var(--font-heading);
+}
+
+.collection__card p {
+  font-size: 0.9rem;
+  letter-spacing: 2px;
+  line-height: 1.5rem;
+}
+
+.collection__banner {
+  position: relative;
+  grid-area: 2/3/3/5;
+  background-image: url("assets/image-2.jpg");
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.collection__banner__content {
+  position: absolute;
+  top: 50%;
+  left: 2rem;
+  transform: translateY(-50%);
+  color: var(--white);
+  font-size: 2.5rem;
+  font-weight: 700;
+  font-family: var(--font-heading);
+  font-style: italic;
+}
+
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.gallery__image {
+  position: relative;
+  isolation: isolate;
+}
+
+.gallery__image::before {
+  position: absolute;
+  content: "";
+  inset: 0;
+  background-color: var(--text-dark);
+  opacity: 0.5;
+  z-index: 1;
+  transition: 0.3s;
+  cursor: pointer;
+}
+
+.gallery__image:hover::before {
+  opacity: 0;
+}
+
+.gallery__image:last-child {
+  display: none;
+}
+
+.gallery__image img {
+  display: flex;
+}
+
+.brands__container {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  gap: 5px;
+}
+
+.brand__image {
+  display: grid;
+  place-content: center;
+  aspect-ratio: 1;
+  background-color: var(--white);
+}
+
+.brand__image img {
+  opacity: 0.5;
+  max-width: 120px;
+  transition: 0.3s;
+}
+
+.brand__image:hover img {
+  opacity: 1;
+  cursor: pointer;
+}
+
+footer {
   background-color: var(--text-dark);
 }
 
 .footer__container {
+  padding: 5rem 1rem;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 5rem;
-  color: var(--secondary-color);
+  gap: 2rem;
 }
 
-.footer__col h3 {
-  font-size: 1.5rem;
-  font-weight: 600;
+.footer__col h4 {
+  font-size: 1.2rem;
+  font-weight: 500;
+  color: var(--primary-color);
   margin-bottom: 2rem;
 }
 
-.footer__col h3 span {
-  color: var(--primary-color);
-}
-
 .footer__col p {
-  font-size: 0.8rem;
+  color: var(--white);
   margin-bottom: 1rem;
   cursor: pointer;
   transition: 0.3s;
@@ -460,72 +435,129 @@ header {
   color: var(--primary-color);
 }
 
-.footer__col p span {
-  font-weight: 600;
+.footer__socials {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
 }
 
-.footer__col h4 {
-  font-size: 1rem;
-  font-weight: 600;
-  margin-bottom: 2rem;
+.footer__socials span {
+  height: 40px;
+  width: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.2rem;
+  border-radius: 100%;
+  color: var(--text-dark);
+  background-color: var(--white);
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.footer__socials span:hover {
+  background-color: var(--primary-color);
+  color: var(--white);
 }
 
 .footer__bar {
-  max-width: var(--max-width);
-  margin: auto;
-  padding: 0.5rem;
-  text-align: center;
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 2rem;
+  color: var(--white);
+  border-top: 1px solid var(--extra-light);
+}
+
+.copyright {
   font-size: 0.8rem;
-  color: var(--secondary-color);
-  border-top: 1px solid var(--text-light);
+}
+
+.payment__cards {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  font-size: 1.2rem;
 }
 
 @media (width < 1200px) {
-  .header__image img:nth-child(1) {
-    max-width: 300px;
+  nav {
+    padding: 1rem;
   }
 
-  .header__image img:nth-child(2) {
-    max-width: 200px;
+  .header__content h1 {
+    font-size: 8rem;
+    line-height: 6.5rem;
   }
 }
 
 @media (width < 900px) {
-  .nav__links {
+  .link:not(.logo) {
     display: none;
   }
 
-  .header__container {
+  .service__container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .banner {
     grid-template-columns: repeat(1, 1fr);
   }
-  .header__image {
-    min-height: 500px;
+
+  .collection__container {
+    grid-template-columns: repeat(3, 1fr);
   }
 
-  .destination__grid {
-    gap: 1rem;
+  .collection__banner {
+    grid-area: 3/1/4/3;
   }
 
-  .trip__grid {
-    grid-template-columns: repeat(2, 1fr);
+  .gallery {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .gallery__image:last-child {
+    display: flex;
+  }
+
+  .brands__container {
+    grid-template-columns: repeat(4, 1fr);
   }
 }
 
 @media (width < 600px) {
-  .destination__grid {
+  .header__container {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .header__container h1 {
+    font-size: 6rem;
+    line-height: 5.5rem;
+  }
+
+  .service__card {
+    padding: 1rem;
+  }
+
+  .collection__container {
     grid-template-columns: repeat(2, 1fr);
   }
 
-  .trip__grid {
-    grid-template-columns: repeat(1, 1fr);
+  .collection__banner {
+    grid-area: 5/1/6/3;
   }
 
-  .gallary__container {
-    grid-template-columns: repeat(1, 1fr);
+  .gallery {
+    grid-template-columns: repeat(2, 1fr);
   }
 
-  .subscribe__container {
-    grid-template-columns: repeat(1, 1fr);
+  .gallery__image:last-child {
+    display: none;
+  }
+
+  .brands__container {
+    grid-template-columns: repeat(3, 1fr);
   }
 
   .footer__container {
