--- a/style.css
+++ b/style.css
@@ -5,955 +5,58 @@
 #ADB0BC TEXT-WHITE-2*/
 
 /* Google fonts */
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100..1000&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap");
 
-/*=============== VARIABLES CSS ===============*/
-:root {
-  --header-height: 3.5rem;
+/* GLOBAL CSS */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  font-family: "DM Sans", sans-serif;
+  font-weight: 400;
+  color: var(--cl-2--);
 }
 
-
-
-/* Some Variables */
-:root {
-  --green-color: #3cd870;
-  --light-black-color: #19222b;
-  --yellow-color: #ffbe18;
-  --text-color: #ffffff;
-  --bg-color: #10181f;
-  --bg-color2: #0b0e13;
-
-  --mb-1-5: 1.5rem;
+body {
+  --cl-1--: #06132d;
+  --cl-2--: #ffffff;
+  --cl-3--: #adb0bc;
+  --cl-4--: linear-gradient(90deg, #45f882 0%, #ffbe18 100%);
+  --cl-5--: #19222b;
+  background: var(--cl-1--);
+  margin: 0;
 }
 
-* {
-  font-family: "Poppins", sans-serif;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Noto Sans", sans-serif;
+  margin: 0;
+}
+
+p {
+  margin: 0;
+}
+
+a {
+  display: inline-block;
+  text-decoration: none;
+  transition: 0.3s ease-in-out;
+  -webkit-transition: 0.3s ease-in-out;
+  -moz-transition: 0.3s ease-in-out;
+  -ms-transition: 0.3s ease-in-out;
+  -o-transition: 0.3s ease-in-out;
+}
+
+ul {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
   list-style: none;
-  text-decoration: none;
-  scroll-padding-top: 2rem;
-  scroll-behavior: smooth;
 }
 
-img {
-  width: 100%;
-}
-body {
-  color: var(--text-color);
-  background-color: var(--bg-color2);
-}
-.grid {
-  display: grid;
-  gap: 1.5rem;
-}
-
-.section {
-  padding: 2rem 0 4rem;
-}
-.container {
-  max-width: 768px;
-  margin-left: var(--mb-1-5);
-  margin-right: var(--mb-1-5);
-}
-
-/* HOME */
-.home__container {
-  gap: 1rem;
-}
-
-.home__content {
-  grid-template-columns: .5fr 3fr;
-  padding-top: 3.5rem;
-  align-items: center;
-}
-
-.home__social {
-  display: grid;
-  grid-template-columns: max-content;
-  row-gap: 1rem;
-}
-
-
-.home__blob {
-  width: 200px;
-  fill: var(--green-color);
-}
-
-.home__blob-img {
-  width: 170px;
-}
-
-.home__data {
-  grid-column: 1/3;
-}
-
-.home__title {
-  font-size: 1.6rem;
-}
-
-.home__subtitle {
-  font-size: var(--h3-font-size);
-  color: var(--text-color);
-  font-weight: var(--font-medium);
-  margin-bottom: var(--mb-0-75);
-}
-
-.home__description {
-  margin-bottom: var(--mb-2);
-}
-
-.home__scroll {
-  display: none;
-}
-
-.home__scroll-button {
-  color: var(--first-color);
-  transition: .3s;
-}
-
-.home__scroll-button:hover {
-  transform: translateY(0.25rem);
-}
-
-.home__scroll-mouse {
-  font-size: 2rem;
-}
-
-.home__scroll-name {
-  font-size: var(--small-font-size);
-  color: var(--title-color);
-  font-weight: var(--font-medium);
-  margin-right: var(--mb-0-25);
-}
-
-.home__scroll-arrow {
-  font-size: 1.25rem;
-}
-
-
-
-.heading {
+.row {
   display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.heading h1 {
-  font-size: 1.6rem;
-  font-weight: 600;
-  text-align: center;
-  margin-top: 10%;
-}
-.about {
-  max-width: 968px;
-  margin-left: auto;
-  margin-right: auto;
-}
-.about-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(180px, auto));
-  gap: 1rem;
-  margin-top: 2rem;
-}
-.about-container .box {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px;
-  border-radius: 0.5rem;
-}
-.about-container .box img {
-  width: 100%;
-  height: 100px;
-  object-fit: contain;
-  object-position: center;
-}
-.about-container .box h2 {
-  font-size: 1rem;
-  font-weight: 600;
-}
-.about-container .box span {
-  font-size: 0.8rem;
-  font-weight: 400;
-  margin-bottom: 1rem;
-}
-.box {
-  background: #1c242f;
-}
-.games {
-  max-width: 968px;
-  margin-left: auto;
-  margin-right: auto;
-}
-.games-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(180px, auto));
-  gap: 1.5rem;
-  margin-top: 2rem;
-}
-.games-container .box {
-  padding: 20px;
-  box-shadow: 1px 2px 11px 4px rgb(14 55 54 /15%);
-  border-radius: 0.5rem;
-  position: relative;
-}
-.games-container .box img {
-  width: 100%;
-  height: 200px;
-  object-fit: contain;
-  object-position: center;
-}
-.games-container .box span {
-  font-weight: 500;
-  font-size: 13px;
-}
-.games-container .box h2 {
-  font-size: 1.2rem;
-  font-weight: 600;
-  margin-top: 0.5rem;
-  color: var(--yellow-color);
-}
-.games-container .box h3 span {
-  color: var(--yellow-color);
-}
-.games-container .box .bx-cart-alt {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  padding: 10px;
-  background: var(--green-color);
-  font-size: 20px;
-  border-radius: 0.5rem 0 0.5rem 0;
-}
-.games-container .box .bx-cart-alt:hover {
-  background: var(--yellow-color);
-  transition: 0.2s all linear;
-}
-.games-container .box .bx-heart {
-  position: absolute;
-  top: 1rem;
-  right: 1rem;
-  font-size: 20px;
-  color: var(--yellow-color);
-}
-.footer {
-  max-width: 968px;
-  margin-left: auto;
-  margin-right: auto;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, auto));
-  gap: 1.5rem;
-  margin-top: 2rem;
-  background: var(--bg-color);
-  border-radius: 0.5rem;
-  padding: 20px;
-  margin-top: 11%;
-}
-.footer-box {
-  display: flex;
-  flex-direction: column;
-}
-.footer-box p {
-  font-size: 0.938rem;
-  margin: 0.5rem 0 1rem;
-}
-.social {
-  display: flex;
-  align-items: center;
-  column-gap: 0.5rem;
-}
-.social .bx {
-  padding: 10px;
-  background: var(--light-black-color);
-  color: var(--yellow-color);
-  border-radius: 5rem;
-  font-size: 20px;
-}
-.social .bx:hover {
-  background: var(--green-color);
-  color: var(--bg-color);
-  transition: 0.2s all linear;
-}
-.footer-box h2 {
-  font-size: 1.1rem;
-  font-weight: 600;
-  margin-bottom: 1rem;
-}
-.footer-box a {
-  color: #868a92;
-  margin-bottom: 1rem;
-}
-.footer-box a:hover {
-  color: var(--green-color);
-}
-.footer-box form {
-  border-bottom: 1px solid var(--text-color);
-  padding: 10px;
-  display: flex;
-  align-items: center;
-  column-gap: 0.5rem;
-}
-.footer-box form input {
-  background: transparent;
-  border: none;
-  outline: none;
-}
-.footer-box form .bx {
-  font-size: 20px;
-  color: var(--green-color);
-  cursor: pointer;
-}
-.footer-box form .bxs-envelope {
-  color: var(--yellow-color);
-}
-
-/* FORM */
-
-.form {
-  background-color: var(--green-color);
-  margin: auto;
-  width: 90%;
-  max-width: 500px;
-  padding: 4.5em 3em;
-  border-radius: 10px;
-  box-shadow: 0 5px 10px -5px rgb(0 0 0 /30%);
-}
-
-.form__title {
-  font-size: 2rem;
-  margin-bottom: 0.5rem;
-}
-
-.form__paragraph {
-  font-weight: 300;
-}
-
-.form__link {
-  font-weight: 400;
-  color: #0b0e13;
-}
-
-.form__container {
-  margin-top: 3em;
-  display: grid;
-  gap: 2.5em;
-}
-
-.form__group {
-  position: relative;
-  --color: #5757577e;
-}
-
-.form__input {
-  width: 100%;
-  background: none;
-  color: #706c6c;
-  font-size: 1rem;
-  padding: 0.6em 0.3em;
-  border: none;
-  outline: none;
-  border-bottom: 1px solid var(--color);
-}
-
-.form__input:not(:placeholder-shown) {
-  color: #4d4646;
-}
-
-.form__label {
-  color: var(--color);
-  cursor: pointer;
-  position: absolute;
-  top: 0;
-  left: 5px;
-  transform: translateY(10px);
-  transition: transform 0.5s, color 0.3s;
-}
-
-.form__input:focus + .form__label,
-.form__input:not(:placeholder-shown) + .form__label {
-  transform: translateY(-12px) scale(0.7);
-  transform-origin: left top;
-  color: #3866f2;
-}
-
-.form__submit {
-  background: #3866f2;
-  color: #ffffff;
-  font-weight: 300;
-  font-size: 1rem;
-  padding: 0.8em 0;
-  border: none;
-  border-radius: 0.5em;
-}
-
-.form__line {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 1px;
-  background-color: #3866f2;
-  transform: scale(0);
-  transform: left bottom;
-  transition: transform 0.4s;
-}
-
-.form__input:focus ~ .form__line,
-.form__input:not(:placeholder-shown) ~ .form__line {
-  transform: scale(1);
-}
-
-/* contact */
-
-.contact-form{
-  max-width: 968px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.container-contact {
-  display: grid;
-  grid-template-columns: repeat(2, 50%);
-  padding: 20px;
-  gap: 10px;
-  width: 98%;
-  margin-top: 40px;
-}
-
-.box-info {
-  color: #ffffff;
-  display: flex;
-  flex-direction: column;
-  gap: 50px;
-}
-
-.box-info > h1 {
-  text-align: left;
-  letter-spacing: 5px;
-}
-
-.data {
-  display: flex;
-  flex-direction: column;
-  gap: 25px;
-}
-
-.data > p {
-  font-size: 1rem;
-}
-
-.data > p > i {
-  color: var(--green-color);
-  margin-right: 10px;
-  font-size: 25px;
-}
-
-.links {
-  display: flex;
-  gap: 15px;
-}
-
-.links > a {
-  text-decoration: none;
-  width: 40px;
-  height: 40px;
-  background: var(--green-color);
-  text-align: center;
-  transition: 0.1s;
-}
-
-.links > a {
-  color: var(--bg-color);
-  line-height: 40px;
-  font-size: 20px;
-}
-
-.form-sub {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  gap: 15px;
-}
-
-.input-box {
-  position: relative;
-}
-
-.input-box > input {
-  width: 100%;
-  height: 40px;
-  padding: 0 10px;
-  outline: none;
-  background: rgba(255 255 255 / 0.1);
-  border: 3px solid transparent;
-  letter-spacing: 1px;
-  transition: 0.3s;
-  color: #ffffff;
-}
-
-.input-box > input:focus,
-.input-box > textarea:focus {
-  border-bottom: 3px solid var(--green-color);
-  animation: shake 0.2s;
-}
-
-.input-box > input::placeholder,
-.input-box > textarea::placeholder {
-  color: #a3a3a3;
-}
-
-.input-box > textarea {
-  width: 100%;
-  height: 130px;
-  background: rgba(255 255 255 / 0.1);
-  border: 3px solid transparent;
-  letter-spacing: 1px;
-  transition: 0.3s;
-  color: #ffffff;
-  padding: 10px;
-}
-
-.form-sub > button {
-  background: var(--green-color);
-  color: #ffffff;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  font-size: 1rem;
-  padding: 10px;
-  transition: 0.2s;
-}
-
-.form-sub > button:hover,
-.links > a:hover {
-  background: rgb(41, 145, 76);
-}
-
-@keyframes shake {
-  0%,
-  100% {
-    transform: translateX(0);
-  }
-  10%,
-  30%,
-  50%,
-  70%,
-  90% {
-    transform: translateX(-10px);
-  }
-  20%,
-  40%,
-  60%,
-  80% {
-    transform: translateX(10px);
-  }
-}
-
-@media screen and (max-width: 600px) {
-
-
-  .box-info {
-    gap: 15px;
-  }
-
-  .box-info > h1 {
-    font-size: 1.5rem;
-  }
-}
-
-/*=============== HEADER & NAV===============*/
-/*  ================== HEADER ==================*/
-/* Ocultamos menu hamburgesa */
-#menu-toggle,
-#cart-toggle,
-.menu-label {
-  display: none;
-}
-
-/* Toggle para el overlay */
-#cart-toggle:checked ~ .overlay,
-#menu-toggle:checked ~ .overlay {
-  display: block;
-}
-
-.header {
-  /* background: var(--secondary); */
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 30px;
-  position: fixed;
-  width: 100%;
-  height: 65px;
-  z-index: 2;
-
-  /* Agregado en la clase mediaquieries */
-  background-color: var(--bg-color);
-}
-
-.logo {
-  height: 40%;
-}
-
-.navbar,
-.navbar-list {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.navbar {
-  gap: 10rem;
-}
-
-.navbar-list {
-  gap: 30px;
-}
-.navbar-list .button a {
-  color: var(--bg-color);
-}
-
-.navbar-list a {
-  color: var(--text-color);
-}
-
-/* Efectos para los elementos a del navbar */
-.navbar-list li {
-  position: relative;
-}
-
-.navbar-list li a::after {
-  content: "";
-  height: 2px;
-  width: 100%;
-  background-color: var(--text-color);
-
-  position: absolute;
-  bottom: 0;
-  left: 0;
-
-  /* Efecto empieza aca */
-  transform: scaleX(0);
-  transform-origin: bottom right;
-  transition: transform 0.15s ease;
-}
-
-.navbar-list a:hover::after {
-  transform-origin: bottom left;
-  transform: scaleX(1);
-}
-
-/* TODO: PSEUDOCLASE */
-.font a {
-  color: var(--text-color);
-}
-/* .navbar-list li:first-child > a {
-  font-weight: var(--font-semibold);
-  color: var(--text-white);
-} */
-
-#cart-toggle:checked ~ .cart {
-  transform: translateX(0);
-}
-/* ---------- */
-
-/* animaciones */
-@keyframes fade {
-  from {
-    opacity: 0;
-  }
-
-  to {
-    opacity: 1;
-  }
-}
-
-@keyframes slide-up {
-  from {
-    transform: translateY(100px);
-  }
-
-  to {
-    transform: translateY(0);
-  }
-}
-
-@keyframes slide-right {
-  from {
-    transform: translateX(100px);
-  }
-
-  to {
-    transform: translateX(0px);
-  }
-}
-
-@keyframes blink {
-  to {
-    opacity: 0;
-    background-color: transparent;
-  }
-}
-
-@keyframes typewriter {
-  to {
-    left: 100%;
-  }
-}
-
-.nav {
-  height: var(--header-height);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.nav__logo {
-  color: var(--text-color);
-  transition: 0.4s;
-}
-
-.nav__logo:hover {
-  color: var(--green-color);
-}
-
-.nav__menu {
-  position: fixed;
-  bottom: 1rem;
-  width: 90%;
-  border-radius: 4rem;
-  padding: 1rem 2.25rem;
-  backdrop-filter: blur(10px);
-  transition: 0.4s;
-}
-
-.nav__list {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.nav__link {
-  color: var(--text-color);
-  font-size: 1.25rem;
-  padding: 0.4rem;
-  display: flex;
-  border-radius: 5rem;
-}
-
-/* Active link */
-.active-link {
-  color: var(--green-color);
-}
-
-/* Change background header */
-.scroll-header {
-  box-shadow: 0 4px 4px hsla(0, 0%, 4%, 0.3);
-}
-
-/*=============== BREAKPOINTS ===============*/
-
-@media (max-width: 425px) {
-  .form__title {
-    font-size: 1.8rem;
-  }
-}
-@media (max-width: 1080px) {
-  .header {
-    padding: 18px 60px;
-  }
-
-
-}
-@media (max-width: 991px) {
-  header {
-    padding: 18px 4%;
-  }
-  section {
-    padding: 50px 4%;
-  }
-
-}
-@media (max-width: 852px) {
-  header {
-    padding: 12px 4%;
-  }
-  #menu-icon {
-    display: initial;
-  }
-  
-
-
-  .about-container {
-    grid-template-columns: repeat(auto-fit, minmax(300px, auto));
-  }
-}
-
-@media (max-width: 712px) {
-
-  .heading h1 {
-    font-size: 1.2rem;
-  }
-  .about {
-    grid-template-columns: repeat(auto-fit, minmax(20rem, auto));
-  }
-}
-
-
-
-
-
-@media (max-width: 370px) {
-
-  .logo {
-    font-size: 1rem;
-  }
-
-  .heading {
-    flex-direction: column;
-    text-align: center;
-  }
-}
-
-/* For small devices */
-@media screen and (max-width: 320px) {
-  .nav__menu {
-    padding: 1rem 1.5rem;
-  }
-}
-
-/* For medium devices */
-@media screen and (min-width: 576px) {
-  .nav__menu {
-    width: 328px;
-    left: 0;
-    right: 0;
-    margin: 0 auto;
-  }
-}
-
-/* For large devices */
-@media screen and (min-width: 992px) {
-  .nav {
-    height: calc(var(--header-height) + 1rem);
-  }
-}
-
-@media (max-width: 992px) {
-  .menu-label {
-    display: flex;
-    order: 2;
-  }
-
-  .menu-label img {
-    height: 20px;
-    width: 25px;
-  }
-
-  .navbar {
-    gap: 30px;
-  }
-
-  .navbar-list {
-    position: absolute;
-    top: 65px;
-    width: 90%;
-    left: 5%;
-    right: 5%;
-    flex-direction: column;
-    align-items: flex-start;
-    background-color: var(--bg-color);
-    border: 2px solid var(--green-color);
-    border-top: 0;
-    padding: 45px 30px;
-    border-radius: 0 0 15px 15px;
-    /* display: none; */
-    z-index: 3;
-    transform: translateX(200%);
-    transition: all 0.5s ease;
-  }
-
-  /* #menu-toggle:checked ~ .navbar-list {
-    display: flex;
-  } */
-
-  #menu-toggle:checked ~ .navbar-list {
-    transform: translateX(0);
-  }
-}
-
-@media screen and (max-width: 350px) {
- 
-  .home__content {
-    grid-template-columns: .25fr 3fr;
-  }
-  .home__blob {
-    width: 180px;
-  }
-  .container {
-    margin-left: var(--mb-1);
-    margin-right: var(--mb-1);
-  }
-  
-}
-
-/* For medium devices */
-@media screen and (min-width: 568px) {
-  .home__content {
-    grid-template-columns: max-content 1fr 1fr;
-  }
-  .home__data {
-    grid-column: initial;
-  }
-  .home__img {
-    order: 1;
-    justify-self: center;
-  }
-  
-}
-
-
-@media screen and (min-width: 768px) {
- 
-  .home__container {
-    row-gap: 5rem;
-  }
-  .home__content {
-    padding-top: 5.5rem;
-    column-gap: 2rem;
-  }
-  .home__blob {
-    width: 270px;
-  }
-  .home__scroll {
-    display: block;
-  }
-  .home__scroll-button {
-    margin-left: 3rem;
-  }
-  .section {
-    padding: 6rem 0 2rem;
-  }
-  .section__subtitle {
-    margin-bottom: 4rem;
-  }
-  .container {
-    margin-left: auto;
-    margin-right: auto;
-  }
-  
-}
-
-/* For large devices */
-@media screen and (min-width: 1024px) {
-  
-  .home__blob {
-    width: 320px;
-  }
-  .home__social {
-    transform: translateX(-6rem);
-  }
- 
 }
